--- a/snippets_part_5.ipynb
+++ b/snippets_part_5.ipynb
@@ -502,8 +502,49 @@
    ],
    "source": [
     "# method two: applymap\n",
+    "# applymap works only on a dataframe\n",
     "# apply works on a series, applymap works on every element of a dataframe\n",
     "df.applymap(len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "   first     last                    email\n0  corey  schafer  coreymschafer@email.com\n1   jane      doe        janedoe@email.com\n2   john   farmer      johnsmith@email.com",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>first</th>\n      <th>last</th>\n      <th>email</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>corey</td>\n      <td>schafer</td>\n      <td>coreymschafer@email.com</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>jane</td>\n      <td>doe</td>\n      <td>janedoe@email.com</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>john</td>\n      <td>farmer</td>\n      <td>johnsmith@email.com</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "source": [
+    "df.applymap(str.lower)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0    Chris\n1     Mary\n2      NaN\nName: first, dtype: object"
+     },
+     "metadata": {},
+     "execution_count": 32
+    }
+   ],
+   "source": [
+    "# method three: map\n",
+    "# map works only on a series. Substitutes each calue with another\n",
+    "# note that unmapped values will be converted to NaN values\n",
+    "df['first'].map({'Corey': 'Chris', 'Jane': 'Mary'})"
    ]
   },
   {
