--- a/snippets_part_5.ipynb
+++ b/snippets_part_5.ipynb
@@ -549,6 +549,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0    Chris\n1     Mary\n2     John\nName: first, dtype: object"
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
+   "source": [
+    "# method four: replace\n",
+    "# works like map except values not found as keys in the dictionary will be left unchanged\n",
+    "df['first'].replace({'Corey': 'Chris', 'Jane': 'Mary'})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
